--- a/NoStoryBoard1/NoStoryBoard1/Resourse/Base.lproj/LaunchScreen.storyboard
+++ b/NoStoryBoard1/NoStoryBoard1/Resourse/Base.lproj/LaunchScreen.storyboard
@@ -16,9 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.min.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="IkI-Xf-Yuy">
-                                <rect key="frame" x="57" y="303.5" width="300" height="299"/>
-                                <color key="tintColor" red="0.270588249" green="0.27450981740000002" blue="0.2823529541" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="list.bullet.rectangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="IkI-Xf-Yuy">
+                                <rect key="frame" x="57" y="304" width="300" height="297.5"/>
+                                <color key="tintColor" red="0.70588237050000002" green="0.31764706970000001" blue="0.38823530080000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="Jfr-8c-akL"/>
                                     <constraint firstAttribute="width" secondItem="IkI-Xf-Yuy" secondAttribute="height" multiplier="1:1" id="WiF-1X-ftu"/>
@@ -39,7 +39,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="sun.min.fill" catalog="system" width="128" height="121"/>
+        <image name="list.bullet.rectangle" catalog="system" width="128" height="93"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
